Bug 383404 - The content pane does not respect the Breeze dark theme
Summary: The content pane does not respect the Breeze dark theme
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-11 18:55 UTC by Alexandre Bonneau
Modified: 2024-04-22 09:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The bright white content pane (338.57 KB, image/png)
2017-08-11 18:55 UTC, Alexandre Bonneau
Details
Akregator 22.12.3 theme dark patch (3.31 KB, patch)
2023-06-24 02:30 UTC, Forest
Details
A screenshot of Kontact's feed reader, showing the application in Breeze Dark but the feed content in a light theme (151.93 KB, image/png)
2024-02-17 01:28 UTC, 318bcb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Bonneau 2017-08-11 18:55:11 UTC
Created attachment 107211 [details]
The bright white content pane

When using the dark theme from Breeze, all the akregator application colors change correctly, apart from the content pane.

This is hard on the eyes.

Would it be possible to change the background-color and color attribute so that it match the theme and the other panes?
Comment 1 Piotr Keplicz 2018-03-22 21:14:48 UTC
There are some themes for this pane in /usr/share/akregator/grantleetheme/5.2. One could edit them by hand and it sort of works... apart from obvious problems.

* These changes will be overwritten on the next upgrade :)
* When content changes, the pane flickers white. 
* Not sure whether there's a simple way to access system colors from the templates.
Comment 2 Alexandre Bonneau 2018-03-22 21:33:09 UTC
Well, thanks for the hint.

I modified all the files there (that was needed otherwise some parts of Akregator did not update), and there is no white flickers when changing pane!

The files : https://gist.github.com/AlexandreBonneau/c41066e36191db7c135af7db3ccab9fa

To the maintainer; any news about fixing that in the near future?
(this does look like an easy one, but perhaps I'm mistaken)
Comment 3 Forest 2022-01-24 03:46:05 UTC
> I modified all the files there

Thanks for sharing those html files, Alexandre. I placed them in $HOME/.local/share/akregator/grantleetheme/5.2 and they make the content pane much easier on the eyes.
Comment 4 Forest 2023-06-24 02:30:39 UTC
Created attachment 159874 [details]
Akregator 22.12.3 theme dark patch

Akregator 22.12.3 changed its grantleetheme HTML, so continuing to use AlexandreBonneau's version yields tiny text. Here's a patch against the new version.

The patch simply changes the foreground & background colors on two elements in each of the four theme files:
body { color: white ! important; background: #232629 ! important; }
.headerbox { color: white ! important; }
Comment 5 318bcb 2024-02-17 01:28:08 UTC
Created attachment 165877 [details]
A screenshot of Kontact's feed reader, showing the application in Breeze Dark but the feed content in a light theme
Comment 6 318bcb 2024-02-17 01:28:55 UTC
This is still an issue for me on Linux Mint 21.3 Cinnamon using the Kontact 23.08.4 flatpak.
Comment 7 Bug Janitor Service 2024-04-09 02:07:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/akregator/-/merge_requests/49
Comment 8 Carl Schwan 2024-04-22 09:51:41 UTC
Git commit cc8207d6200cf2d57af98d9454043c79eedb642e by Carl Schwan, on behalf of Martín González Gómez.
Committed on 22/04/2024 at 09:50.
Pushed by carlschwan into branch 'master'.

Add dark mode support for article view

M  +88   -38   src/formatter/grantleeviewformatter.cpp
M  +6    -1    src/formatter/grantleeviewformatter.h
M  +20   -9    src/formatter/html/5.2/normalview.html

https://invent.kde.org/pim/akregator/-/commit/cc8207d6200cf2d57af98d9454043c79eedb642e