Add dark mode support for article view

BUG: 383404